fix(alignment): lottie text alignment final fix

--- a/styles.css
+++ b/styles.css
@@ -1233,7 +1233,7 @@ table , th , td {
         height: 30rem !important;
     }
     .lottie_text_container p {
-        font-size: 3.75rem !important;
+        font-size: 3.60rem !important;
     }
 }
 
@@ -1447,7 +1447,6 @@ table , th , td {
         font-size: 20px !important;
     }
 
-
      .new_ui_section , .devices_section  , .contact_section , .header .main-top-head, .header .top_head, .home_section , footer , .abilities_main , .industry_main , .feat_head, .platforms_section , .action_section > h2 ,
       .action_content , .about_main_section , .about_bottom_section , .download_section , .support_section h2, .faq-content , .mobile_tab_main .tab_select , .request_form_section , .generic_index_section .generic_main {
         padding-left: 2.5rem !important;
@@ -1457,7 +1456,7 @@ table , th , td {
         padding-left: 2.5rem !important;
     }
     .lottie_text_container p {
-        font-size: 3.5rem !important;
+        font-size: 3.15rem !important;
     }
 
 }
@@ -1594,7 +1593,7 @@ table , th , td {
 
 @media (max-width: 996px) {
     .lottie_text_container p {
-        font-size: 3rem !important;
+        font-size: 2.75rem !important;
     }
 
     .btn_xlarge {
@@ -1615,6 +1614,12 @@ table , th , td {
     }
 }
 
+@media (max-width: 880px) {
+
+    .lottie_text_container p {
+        font-size: 2.5rem !important;
+    }
+}
 
 @media (max-width: 768px) {
     html {
@@ -1764,7 +1769,7 @@ table , th , td {
     }
 
     .lottie_text_container p {
-        font-size: 2.75rem !important;
+        font-size: 2.45rem !important;
     }
 
     .contact_form .right_section textarea {
@@ -1924,6 +1929,9 @@ table , th , td {
     .feat_plan_box h5 {
         max-width: 90% !important;
     }
+    .lottie_text_container p {
+        font-size: 2.15rem !important;
+    }
 }
 
 @media (max-width: 576px) {
@@ -1989,7 +1997,7 @@ table , th , td {
     }
 
     .lottie_text_container p {
-        font-size: 1.75rem !important;
+        font-size: 2.5rem !important;
     }
 
     .abilities_triangle_bottom {
@@ -2044,6 +2052,12 @@ table , th , td {
         padding-top: 100px !important;
     }
 
+}
+
+@media (max-width: 476px) {
+    .lottie_text_container p {
+        font-size: 1.85rem !important;
+    }
 }
 
 @media (max-width: 420px) {
